# VulkanApp

./: CMakeLists.txt  build.bat  build_errors.txt  compile_commands.json  copy_assets.bat.in  gen_cmake.py  main.cpp  meadow_app.cpp  meadow_app.h  pch.h
assets/shaders/: cube.frag  cube.vert  shadow.frag  triangle.vert
assets/shaders/cubemap/: equirect_to_cubemap.comp  skybox.frag  skybox.vert
assets/shaders/sky/: atmosphere.frag  cloud_noise.comp  clouds.frag  generate_lut.comp  postprocess.vert  sun_billboard.frag  sun_billboard.vert
core/: application.cpp  application.h  core_context.cpp  core_context.h  hdri_converter.cpp  hdri_converter.h  input.cpp  input.h  job_system.cpp  job_system.h  time.cpp  time.h  time_utils.cpp  time_utils.h  window.cpp  window.h
physics/: collider.cpp  collider.h
renderer/: CubeRenderer.cpp  CubeRenderer.h  frame_manager.h  lighting_types.h  material_system.cpp  material_system.h  render_context.h  scene_renderer.h  shadow_mapper.cpp  shadow_mapper.h  sky_renderer.cpp  sky_renderer.h  skybox_renderer.cpp  skybox_renderer.h  triangle_renderer.cpp  triangle_renderer.h
rhi/vulkan/: async_resource_loader.cpp  async_resource_loader.h  command_buffer_optimizer.cpp  command_buffer_optimizer.h  command_pool.cpp  command_pool.h  compute_pipeline.cpp  compute_pipeline.h  descriptor_allocator.cpp  descriptor_allocator.h  device.cpp  device.h  pipeline.cpp  pipeline.h  resource.cpp  resource.h  shader_manager.cpp  shader_manager.h  staging_buffer_pool.cpp  staging_buffer_pool.h  swapchain.cpp  swapchain.h  vulkan_common.h
scene/: components.h  entity.h
shaders/: cube.frag  cube.vert  grass.frag  grass.vert  pbr.frag  pbr.vert  shadow.vert  sky.frag  sky.vert
shaders/sky/: atmosphere.frag  atmosphere.vert  cloud_noise.comp  clouds.frag  clouds.vert  generate_stars.comp  postprocess.frag  stars.frag  stars.vert  sun_billboard.frag  sun_billboard.vert  sun_texture.comp
world/: fps_player.cpp  fps_player.h  meadow_scene.cpp  meadow_scene.h
